[tool.poetry]
name = "web crawler"
version = "0.1.0"
description = ""
authors = ["melody50819 <melody870225@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
selenium = "^4.5.0"
beautifulsoup4 = "^4.11.1"
mechanize = "^0.4.8"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
